--- a/page-3.html
+++ b/page-3.html
@@ -6,6 +6,24 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
-    <div class="w-[100%] h-[80px] bg-blue-500"></div>
+    <div class="w-[100%] h-[80px]  flex items-center">
+        <div >
+            <img src="./Лого.png" alt="" class="ml-[15px]">
+        </div>
+        <div class="flex ml-[125px] gap-[15px]">
+            <p>Как покупать</p>
+            <p>Распродажи</p>
+            <p>Цены</p>
+            <p>Помощь</p>
+            <p>Бонусы</p>
+            <p>Блог</p>
+            <p>Магазины</p>
+        </div>
+        <div class="flex ml-[145px] items-center">
+            <img src="./User (1).png" alt="">
+            <p class="ml-[15px]">Вход</p>
+            <button class="ml-[30px] bg-green-600 p-[5px] rounded-[15px] text-white">Связаться с нами</button>
+        </div>
+    </div>
   </body>
 </html>
