--- a/page-3.html
+++ b/page-3.html
@@ -25,5 +25,9 @@
             <button class="ml-[30px] bg-green-600 p-[5px] rounded-[15px] text-white">Связаться с нами</button>
         </div>
     </div>
+    <div class="w-[100%] h-[150px] bg-violet-500 rounded-[20px]">
+        <p class="ml-[100px] pt-[30px] text-white">Главная /  Блог</p>
+        <h1 class="text-[40px] ml-[100px] text-white">Блог</h1>
+    </div>
   </body>
 </html>
