--- a/page-3.html
+++ b/page-3.html
@@ -12,7 +12,7 @@
         <div>
             <img src="./Лого.png" alt="" class="ml-[15px]">
         </div>
-        <div class="flex ml-[125px] gap-[15px]">
+        <div class="flex ml-[125px] gap-[15px] w-[80%]">
             <p>Как покупать</p>
             <p>Распродажи</p>
             <p>Цены</p>
@@ -21,7 +21,7 @@
             <p>Блог</p>
             <p>Магазины</p>
         </div>
-        <div class="flex ml-[145px] items-center">
+        <div class="flex ml-[0px] items-center">
             <img src="./User (1).png" alt="">
             <p class="ml-[15px]">Вход</p>
             <button class="ml-[30px] bg-green-600 p-[5px] rounded-[15px] text-white">Связаться с нами</button>
