--- a/src/image/page2.html
+++ b/src/image/page2.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./output.css">
+    <link rel="stylesheet" href="../output.css">
 </head>
 <body>
-    
+    <header class="flex items-center justify-between max-w-[1200px] m-auto py-[30px]">
+        <img src="./_2243895274448.png" alt="">
+        <nav class="flex text-[20px] gap-[10px]">
+            <p>Как покупать</p>
+            <p>Распродажы</p>
+            <p>Цены</p>
+            <p>Помощь</p>
+            <p>Бонусы</p>
+            <p>Блог</p>
+            <p>Магазины</p>
+        </nav>
+        <div class="flex gap-[10px]">
+            <img src="./User.png" alt="">
+            <p>Вход</p>
+        </div>
+        <button class="bg-green-500 rounded-3xl px-[20px] text-[#fff] p-[10px]">Связаться с нами</button></button>
+    </header>
+   
 </body>
 </html>
