--- a/src/image/page2.html
+++ b/src/image/page2.html
@@ -25,6 +25,10 @@
         </div>
         <button class="bg-green-500 rounded-3xl px-[20px] text-[#fff] p-[10px]">Связаться с нами</button></button>
     </header>
+    <section class="bg-[#5B52A3] max-w-[1400px] text-[white] m-auto h-[300px] rounded-4xl px-[100px] py-[50px]">
+        <p class="text-[15px]">Главная / Блог</p>
+        <h1 class="text-6xl font-bold mt-1">Блог</h1>
+    </section>
    
 </body>
 </html>
