--- a/src/image/page2.html
+++ b/src/image/page2.html
@@ -29,6 +29,225 @@
         <p class="text-[15px]">Главная / Блог</p>
         <h1 class="text-6xl font-bold mt-1">Блог</h1>
     </section>
-   
+    <section class="  py-10">
+        <div class="max-w-7xl mx-auto px-6">
+            <div class="flex flex-wrap gap-6">
+                <div class="bg-white rounded-4xl shadow-sm w-full sm:w-[48%] lg:w-[31%] ">
+                    <div class="h-52 bg-gray-200">
+                        <img src="./фото.png" alt="">
+                    </div>
+                    <div class="p-5">
+                        <h3 class="text-lg font-bold mb-2"> Интернет-магазин Urban Outfitters в UK: обзор</h3>
+                        <div class="flex items-center justify-between text-sm text-gray-400">
+                            <span>22.10.2021</span>
+                            <span>Читать 8 минут</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white rounded-2xl shadow-sm w-full sm:w-[48%] lg:w-[31%] ">
+                    <div class="h-52 bg-gray-200">
+                        <img src="./фото (1).png" alt="">
+                    </div>
+                    <div class="p-5">
+                        <h3 class="text-lg font-semibold mb-2">
+                            Overstock. Брендовые товары по доступным ценам
+                        </h3>
+                        <div class="flex items-center justify-between text-sm text-gray-400">
+                            <span>22.10.2021</span>
+                            <span>Читать 6 минут</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white rounded-2xl shadow-sm w-full sm:w-[48%] lg:w-[31%] ">
+                    <div class="h-52 bg-gray-200">
+                        <img src="./фото (2).png" alt="">
+                    </div>
+                    <div class="p-5">
+                        <h3 class="text-lg font-semibold mb-2">Overstock. Брендовые товары по доступным ценам</h3>
+                        <div class="flex items-center justify-between text-sm text-gray-400">
+                            <span>22.10.2021</span>
+                            <span>Читать 6 минут</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white rounded-4xl shadow-sm w-full sm:w-[48%] lg:w-[31%] ">
+                    <div class="h-52 bg-gray-200">
+                        <img src="./фото (3).png" alt="">
+                    </div>
+                    <div class="p-5">
+                        <h3 class="text-lg font-bold mb-2">
+                            16 лучших подарков с Амазона
+                            в 2021 году
+                        </h3>
+                        <div class="flex items-center justify-between text-sm text-gray-400">
+                            <span>22.10.2021</span>
+                            <span>Читать 6 минут</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white rounded-2xl shadow-sm w-full sm:w-[48%] lg:w-[31%] ">
+                    <div class="h-52 bg-gray-200">
+                        <img src="./фото (4).png" alt="">
+                    </div>
+                    <div class="p-5">
+                        <h3 class="text-lg font-bold mb-2"> Target — семейный супермаркет
+                            с ценами от 300 рублей! </h3>
+                        <div class="flex items-center justify-between text-sm text-gray-400">
+                            <span>22.10.2021</span>
+                            <span>Читать 6 минут</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white rounded-2xl shadow-sm w-full sm:w-[48%] lg:w-[31%] ">
+                    <div class="h-52 bg-gray-200">
+                        <img src="./фото (5).png" alt="">
+                    </div>
+                    <div class="p-5">
+                        <h3 class="text-lg font-bold mb-2"> Английский магазин RIPNDIP. Покупаем самовыражение</h3>
+                        <div class="flex items-center justify-between text-sm text-gray-400">
+                            <span>22.10.2021</span>
+                            <span>Читать 6 минут</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white rounded-2xl shadow-sm w-full sm:w-[48%] lg:w-[31%] ">
+                    <div class="h-52 bg-gray-200">
+                        <img src="./фото (6).png" alt="">
+                    </div>
+                    <div class="p-5">
+                        <h3 class="text-lg font-semibold mb-2"> Nautica. Элитные товары из Англии по низким ценам </h3>
+                        <div class="flex items-center justify-between text-sm text-gray-400">
+                            <span>22.10.2021</span>
+                            <span>Читать 6 минут</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white rounded-2xl shadow-sm w-full sm:w-[48%] lg:w-[31%] ">
+                    <div class="h-52 bg-gray-200">
+                        <img src="./фото (7).png" alt="">
+                    </div>
+                    <div class="p-5">
+                        <h3 class="text-lg font-bold mb-2">Forever 21 - покупаем джинсы
+                            за 1 500 рублей </h3>
+                        <div class="flex items-center justify-between text-sm text-gray-400">
+                            <span>22.10.2021</span>
+                            <span>Читать 6 минут</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white rounded-2xl shadow-sm w-full sm:w-[48%] lg:w-[31%] ">
+                    <div class="h-52 bg-gray-200">
+                        <img src="./фото (8).png" alt="">
+                    </div>
+                    <div class="p-5">
+                        <h3 class="text-lg font-bold mb-2"> Как купить кроссовки Balenciaga на 30 000 рублей дешевле?
+                        </h3>
+                        <div class="flex items-center justify-between text-sm text-gray-400">
+                            <span>22.10.2021</span>
+                            <span>Читать 6 минут</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white rounded-2xl shadow-sm w-full sm:w-[48%] lg:w-[31%] ">
+                    <div class="h-52 bg-gray-200">
+                        <img src="./фото (9).png" alt="">
+                    </div>
+                    <div class="p-5">
+                        <h3 class="text-lg font-semibold mb-2"> Топ-7 самых дорогих сумок
+                            Louis Vuitton</h3>
+                        <div class="flex items-center justify-between text-sm text-gray-400">
+                            <span>22.10.2021</span>
+                            <span>Читать 6 минут</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white rounded-2xl shadow-sm w-full sm:w-[48%] lg:w-[31%] ">
+                    <div class="h-52 bg-gray-200">
+                        <img src="./фото (10).png" alt="">
+                    </div>
+                    <div class="p-5">
+                        <h3 class="text-lg font-bold mb-2">BH Cosmetics Galaxy. Галактика красоты и ухода </h3>
+                        <div class="flex items-center justify-between text-sm text-gray-400">
+                            <span>22.10.2021</span>
+                            <span>Читать 6 минут</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white rounded-2xl shadow-sm w-full sm:w-[48%] lg:w-[31%] ">
+                    <div class="h-52 bg-gray-200">
+                        <img src="./фото (11).png" alt="">
+                    </div>
+                    <div class="p-5">
+                        <h3 class="text-lg font-bold mb-2"> “Вансы”. Крутые кеды, которые не выйдут из моды никогда!
+                        </h3>
+                        <div class="flex items-center justify-between text-sm text-gray-400">
+                            <span>22.10.2021</span>
+                            <span>Читать 6 минут</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bg-[#5B52A3] flex items-center content-center max-w-[1400px] text-[white] m-auto h-[300px] rounded-4xl px-[100px] py-[50px]">
+        <h1 class="text-[37px] items-center font-bold mt-1">Остались вопросы? Спросите нас в соцсетях!</h1>
+        <div class="flex ml-[150px] gap-2.5">
+            <img src="./Ватсап.png" alt="">
+            <img src="./Вайбер.png" alt="">
+            <img src="./Чат.png" alt="">
+        </div>
+    </section>
+    <footer class="pt-16 pb-8">
+  <div class="max-w-7xl mx-auto px-6">
+    <div class="flex flex-wrap justify-between gap-12">
+      <div class="min-w-[220px]">
+        <div class="flex items-center gap-3 mb-6">
+          <img src="./_2243895274448.png" alt="">
+          <span class="text-xl font-semibold text-gray-800">OkeyPost</span>
+        </div>
+        <div class="flex gap-4">
+          <img src="./Соцсети.png" alt="">
+        </div>
+      </div>
+      <div class="flex flex-wrap gap-16">
+        <div class="min-w-[200px]">
+          <p class="font-bold text-gray-800 mb-4">О компании</p>
+          <div class="flex flex-col gap-2 text-gray-500 text-sm">
+            <p >Услуги</p>
+            <p >Цены</p>
+            <p >Отзывы</p>
+            <p >Контакты</p>
+            <p >Вакансии</p>
+            <p >Соглашение о персональных данных</p>
+            <p >Условия использования</p>
+          </div>
+        </div>
+        <div class="min-w-[220px]">
+          <p class="font-bold text-gray-800 mb-4">Полезное</p>
+          <div class="flex flex-col gap-2 text-gray-500 text-sm">
+            <p>Как работает наш сервис</p>
+            <p>Как купить с оператором</p>
+            <p>Ответы на частые вопросы</p>
+            <p>Популярные магазины</p>
+            <p>Черный список магазинов</p>
+            <p>Актуальные распродажи</p>
+          </div>
+        </div>
+        <div class="min-w-[220px]">
+          <p class="font-semibold text-gray-800 mb-4">Спецпроекты</p>
+
+          <div class="flex flex-col gap-2 text-gray-500 text-sm">
+            <p>50% на первую доставку</p>
+            <p>Скидки для постоянных клиентов</p>
+            <p>Реферальная программа</p>
+            <p>Кэшбек Mr.Rebates & Rakuten</p>
+            <p>Stop Fraud</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="border-t border-gray-300 mt-14 pt-6 text-center text-sm text-gray-400"> © 2021 OkeyPost. Все права защищены.</div>
+  </div>
+    </footer>
 </body>
 </html>
