--- a/imggg/index.html
+++ b/imggg/index.html
@@ -1,64 +1,63 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../src/output.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="../src/output.css">
 </head>
 
 <body>
-      <section class="max-w-7xl mx-auto px-6 py-12 bg-center ">
-         <div>
-        <div class="  md:hidden lg:flex justify-around p-2 ">
-            <img src="./_2243895274448 (1).png" alt="">
-            <p>Как покупать</p>
-            <p>Распродажи</p>
-            <p>Цены</p>
-            <p>Помощь</p>
-            <p>Бонусы</p>
-            <p>Блог</p>
-            <p>Магазины</p>
-            <div class="flex">
+  <section class="max-w-7xl mx-auto px-6 py-12 bg-center ">
+    <div>
+      <div class="  md:hidden lg:flex justify-around p-2 ">
+        <img src="./_2243895274448 (1).png" alt="">
+        <p>Как покупать</p>
+        <p>Распродажи</p>
+        <p>Цены</p>
+        <p>Помощь</p>
+        <p>Бонусы</p>
+        <p>Блог</p>
+        <p>Магазины</p>
+        <div class="flex">
 
-                <img class="h-8" src="./Вход (1).png" alt="">
-            </div>
-            <button class="bg-black text-white w-50 h-10 rounded-xl">Связаться с нами</button>
+          <img class="h-8" src="./Вход (1).png" alt="">
         </div>
+        <button class="bg-black text-white w-50 h-10 rounded-xl">Связаться с нами</button>
+      </div>
     </div>
-        <div class="rounded-3xl bg-gradient-to-r from-indigo-600 to-sky-500 overflow-hidden">
-            <div class="grid md:grid-cols-2 items-center">
+    <div class="rounded-3xl bg-gradient-to-r from-indigo-600 to-sky-500 overflow-hidden">
+      <div class="grid md:grid-cols-2 items-center">
 
-                <div class="p-10 md:p-16 text-white">
-                    <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-6">
-                        Доставка товаров <br>
-                        из Великобритании <br>
-                        в Россию
-                    </h1>
+        <div class="p-10 md:p-16 text-white">
+          <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-6">
+            Доставка товаров <br>
+            из Великобритании <br>
+            в Россию
+          </h1>
 
-                    <p class="text-lg text-indigo-100 mb-8 max-w-lg">
-                        Начните экономить до 80% на шопинге. Регистрируйтесь в OkeyPost,
-                        чтобы покупать со скидками в UK одежду, обувь, гаджеты известных
-                        брендов и безопасно отправлять вещи в Россию.
-                    </p>
+          <p class="text-lg text-indigo-100 mb-8 max-w-lg">
+            Начните экономить до 80% на шопинге. Регистрируйтесь в OkeyPost,
+            чтобы покупать со скидками в UK одежду, обувь, гаджеты известных
+            брендов и безопасно отправлять вещи в Россию.
+          </p>
 
-                    <button
-                        class="bg-green-500 hover:bg-green-600 transition px-6 py-3 rounded-full font-semibold shadow-lg">
-                        Получить адрес в UK
-                    </button>
-                </div>
-
-                <div class="relative flex justify-center items-center p-10">
-
-                    <div class="absolute w-80 h-80 bg-purple-300 opacity-30 rounded-full blur-2xl"></div>
-
-                    <img src="./Иллюстрация (2).png" alt="Courier" class="relative z-10 w-72 md:w-96" />
-                </div>
-
-            </div>
+          <button class="bg-green-500 hover:bg-green-600 transition px-6 py-3 rounded-full font-semibold shadow-lg">
+            Получить адрес в UK
+          </button>
         </div>
-    </section>
-    <div class="max-w-6xl mx-auto px-4 py-10">
+
+        <div class="relative flex justify-center items-center p-10">
+
+          <div class="absolute w-80 h-80 bg-purple-300 opacity-30 rounded-full blur-2xl"></div>
+
+          <img src="./Иллюстрация (2).png" alt="Courier" class="relative z-10 w-72 md:w-96" />
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <div class="max-w-6xl mx-auto px-4 py-10">
     <h1 class="text-2xl md:text-4xl font-bold mb-8">
       Насколько выгодно покупать?
     </h1>
@@ -100,9 +99,7 @@
 
         <div class="flex justify-center">
           <div class="bg-gray-100 rounded-full p-6">
-            <img src="./ade18536c0b323c968ffabb87ff4fe1cd0fe7030.png"
-                 class="w-48 md:w-64 object-contain"
-                 alt="jacket">
+            <img src="./ade18536c0b323c968ffabb87ff4fe1cd0fe7030.png" class="w-48 md:w-64 object-contain" alt="jacket">
           </div>
         </div>
 
@@ -156,6 +153,106 @@
     </div>
 
   </div>
+  <section class="bg-gray-100 py-12 px-4">
+
+    <div class="max-w-6xl mx-auto space-y-16">
+
+      <div class="rounded-3xl bg-gradient-to-r from-indigo-600 to-cyan-500 p-8 md:p-14 text-white">
+
+        <div class="flex flex-col md:flex-row items-center justify-between gap-10">
+
+          <div class="w-full md:w-1/3 flex justify-center">
+            <img src="./Иллюстрация (3).png" alt="shopping" class="w-64 md:w-80" />
+          </div>
+          <div class="w-full md:w-2/3 space-y-6 text-center md:text-left">
+            <h2 class="text-xl md:text-3xl font-bold leading-snug">
+              Поручите нашим мастерам шопинга оформить
+              заказы в английских магазинах и освободите время
+              для более важных дел.
+            </h2>
+
+            <p class="text-sm md:text-base text-white/80">
+              Такой способ покупки также подойдёт, если магазин принимает только английские карты.
+            </p>
+
+            <button class="bg-green-500 hover:bg-green-600 transition px-8 py-3 rounded-full font-semibold shadow-lg">
+              Попробовать
+            </button>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="space-y-6">
+
+        <div class="max-w-3xl space-y-4">
+          <h2 class="text-2xl md:text-3xl font-bold text-gray-900">
+            OkeyPost удобная и быстрая доставка
+            посылок из Великобритании
+          </h2>
+
+          <p class="text-gray-600">
+            Рассчитайте стоимость доставки из Англии к вам домой.
+            Мы получим ваши посылки на складе, при необходимости объединим несколько доставок в одну
+            и отправим их к вам надежно упакованными.
+          </p>
+        </div>
+        <div class="bg-white rounded-2xl shadow-md p-6 md:p-8">
+
+          <div class="grid grid-cols-1 md:grid-cols-5 gap-6">
+
+            <div class="flex flex-col">
+              <label class="text-sm text-gray-500 mb-1">Страна:</label>
+              <select class="border-b border-gray-300 focus:outline-none focus:border-indigo-500 py-2">
+                <option>Россия</option>
+                <option>Казахстан</option>
+                <option>Узбекистан</option>
+              </select>
+            </div>
+
+            <div class="flex flex-col">
+              <label class="text-sm text-gray-500 mb-1">Город:</label>
+              <input type="text" placeholder="Москва"
+                class="border-b border-gray-300 focus:outline-none focus:border-indigo-500 py-2" />
+            </div>
+
+            <div class="flex flex-col">
+              <label class="text-sm text-gray-500 mb-1">Индекс:</label>
+              <input type="text" placeholder="Введите индекс"
+                class="border-b border-gray-300 focus:outline-none focus:border-indigo-500 py-2" />
+            </div>
+
+            <div class="flex flex-col">
+              <label class="text-sm text-gray-500 mb-1">Вес посылки:</label>
+              <input type="number" placeholder="0.5"
+                class="border-b border-gray-300 focus:outline-none focus:border-indigo-500 py-2" />
+            </div>
+
+            <div class="flex flex-col">
+              <label class="text-sm text-gray-500 mb-1">Дополнительные услуги:</label>
+              <select class="border-b border-gray-300 focus:outline-none focus:border-indigo-500 py-2">
+                <option>Выберите услуги</option>
+                <option>Страховка</option>
+                <option>Упаковка</option>
+              </select>
+            </div>
+
+          </div>
+
+          <div class="mt-8">
+            <button
+              class="bg-green-500 hover:bg-green-600 text-white px-10 py-3 rounded-full font-semibold shadow-md transition">
+              Рассчитать
+            </button>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+  </section>
 </body>
 
 </html>
